--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "nuxt-ts build",
     "generate": "nuxt-ts generate",
     "start": "nuxt-ts start",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "commit": "npx git-cz"
   },
   "lint-staged": {
     "*.{js,vue}": "yarn lint",
